--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -61,7 +61,7 @@
             padding: map-get($spacers, 2) !important;
         }
         &.o-sendMessageActive {
-            background-color: rgba($o-action, .75);
+            background-color: $primary;
             opacity: 100% !important;
             &:focus-visible {
                 outline: darken($o-action, 15%) solid 1px;
