[FIX] mail: improve composer message
Previously, the mail composer editor size was only a few lines long if
documents was installed. This is because the mail composer override
widget implemented in documents caused a CSS class matching the
overriden widget to be removed, neutralizing the "min-height" attribute
of the editor.

This commit adds an additional class to the mail composer editor
widget definition, to allow for min-height to apply even if
the widget is overriden.

The stylesheet now looks for this class, rather than for the default
widget class, to determine the height of the input.

--

This commit adds "e.g." to the Subject placeholder text in the composer.

--

To enhance readability, this commit adds a line break before the "--"
to all composer signature inserts.

task-5010871

closes odoo/odoo#223700

Signed-off-by: Thibault Delavallee (tde) <tde@openerp.com>

--- a/addons/mail/wizard/mail_compose_message_views.xml
+++ b/addons/mail/wizard/mail_compose_message_views.xml
@@ -52,7 +52,7 @@
                                 options="{'edit_tags': True}"
                                 context="{'force_email': True, 'show_email': True, 'form_view_ref': 'base.view_partner_simple_form', 'forward_mode': True}"/>
                         </div>
-                        <field name="subject" placeholder="Welcome to MyCompany!" required="True"/>
+                        <field name="subject" placeholder="e.g. Welcome to MyCompany!" required="True"/>
                         <field name="reply_to" placeholder='Recipient Followers'
                             invisible="reply_to_mode == 'update'"
                             required="reply_to_mode != 'update'"/>
