[IMP] mail: improve forms visual consistency
task-5042678

--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -96,7 +96,6 @@
 
 .o-mail-Composer-bg {
     background-color: var(--mail-Composer-bg, $o-view-background-color);
-    --border-opacity: .5;
 }
 
 .o-mail-Composer-inputStyle {
@@ -191,8 +190,7 @@
     }
 
     &:has(textarea:focus) {
-        --border-opacity: .25;
-        border-color: rgba($o-action, var(--border-opacity)) !important;
+        --border-color: #{$o-component-active-border};
     }
 }
 
