[IMP] mail: PoC redesign top of discuss sidebar and messaging menu

--- a/addons/mail/static/src/core/common/core.dark.scss
+++ b/addons/mail/static/src/core/common/core.dark.scss
@@ -1,5 +1,5 @@
 .o-mail-discussSidebarBgColor {
-    background-color: mix($white, $o-webclient-background-color, 15%) !important;
+    background-color: mix($gray-100, $gray-200, 65%) !important;
 }
 
 a.o_mail_redirect, a.o_channel_redirect, a.o_message_redirect_transformed {
