--- a/addons/mail/static/src/core/public_web/discuss.dark.scss
+++ b/addons/mail/static/src/core/public_web/discuss.dark.scss
@@ -1,5 +1,5 @@
 .o_web_client:where(:has(.o-mail-Discuss)) {
-    --mail-Discuss-surface-dark: #{mix($white, $o-webclient-background-color, 15%)};
+    --mail-Discuss-surface-dark: #{mix($gray-100, $gray-200, 65%)};
     --NavBar-entry-backgroundColor: var(--mail-Discuss-surface-dark);
 
     .o_main_navbar, .o_control_panel {
