--- a/addons/sms_twilio/views/res_config_settings_views.xml
+++ b/addons/sms_twilio/views/res_config_settings_views.xml
@@ -8,9 +8,11 @@
             <field name="inherit_id" ref="sms.res_config_settings_view_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//widget[@service_name='sms']" position="before">
-                    <field name="sms_provider"/>
+                    <field name="sms_provider" class="o_light_label" widget="radio" options="{'horizontal': true}" required="True"/>
                     <div class="content-group" invisible="sms_provider != 'twilio'">
-                        <button name="action_open_sms_twilio_account_manage" type="object" class="btn btn-secondary" string="Manage Twilio Connection"/>
+                        <button name="action_open_sms_twilio_account_manage" icon="oi-arrow-right"
+                                type="object" class="btn-link"
+                                string="Configure Twilio Account"/>
                     </div>
                 </xpath>
                 <xpath expr="//widget[@service_name='sms']" position="attributes">
