--- a/addons/sms_twilio/wizard/sms_twilio_account_manage_views.xml
+++ b/addons/sms_twilio/wizard/sms_twilio_account_manage_views.xml
@@ -6,32 +6,32 @@
         <field name="mode">primary</field>
         <field name="arch" type="xml">
             <form string="Twilio SMS Manage Connection">
-                <div>
-                    You can access the documentation
-                    <a target="_blank" href="https://www.odoo.com/documentation/17.0/applications/marketing/sms_marketing/twilio.html">
-                        by clicking here
-                        <i class="fa fa-external-link" aria-hidden="true"/>
-                    </a>
-                </div>
-
                 <group string="Credentials">
                     <field name="company_id" invisible="1"/>
-                    <field name="sms_twilio_account_sid" placeholder="ACabcde12345abcde12345abcde12345ab"/>
-                    <field name="sms_twilio_auth_token" password="True" placeholder="abcde12345abcde12345abcde12345ab"/>
+                    <label for="sms_twilio_account_sid"/>
+                    <div class="d-flex align-items-center">
+                        <field name="sms_twilio_account_sid" placeholder="ACabcde12345abcde12345abcde12345ab"
+                            required="1"/>
+                        <a target="_blank" class="ms-1 w-25" href="https://www.odoo.com/documentation/17.0/applications/marketing/sms_marketing/twilio.html">
+                            Need help ?
+                            <i class="fa fa-external-link" aria-hidden="true"/>
+                        </a>
+                    </div>
+                    <field name="sms_twilio_auth_token" password="True" placeholder="abcde12345abcde12345abcde12345ab"
+                        required="1"/>
+                    <label for="test_number"/>
+                    <div class="d-flex align-items-center">
+                        <field name="test_number" placeholder="+1 555-123-4567"/>
+                        <button name="action_send_test" string="Send test SMS"
+                            icon="fa-send" type="object"
+                            class="btn btn-secondary w-25 ms-1"/>
+                    </div>
                 </group>
-
-                <group string="Numbers">
-                    <p colspan="2">
-                        When sending an SMS to a partner, Odoo will pick the first number available
-                        from the same country as the recipient. If no number exists for this country,
-                        Odoo will use the first one available.
-                    </p>
+                <group string="Phone Numbers">
                     <button
                         class="btn btn-secondary" colspan="2"
                         type="object" name="action_reload_numbers"
-                        string="Reload Numbers from Twilio" icon="fa-refresh"
-                        confirm="Any number here that is not on Twilio will be deleted and the ordering will be reset to Twilio's."
-                    />
+                        string="Reload Numbers from Twilio" icon="fa-refresh"/>
                     <field name="sms_twilio_number_ids" colspan="2" nolabel="1">
                         <tree editable="bottom" delete="0">
                             <field name="sequence" widget="handle"/>
@@ -41,19 +41,9 @@
                         </tree>
                     </field>
                 </group>
-
-                <group string="Testing">
-                    <field name="sms_twilio_to_number" placeholder="+1 555-123-4567"/>
-
-                    <div colspan="2">
-                        <button name="action_send_test" string="Send test SMS" icon="fa-send" type="object" class="btn btn-secondary"/>
-                    </div>
-
-                </group>
-
                 <footer>
-                    <button string="Save" type="object" name="action_save" class="btn-primary" data-hotkey="q"/>
-                    <button string="Cancel" class="btn-secondary" special="cancel" data-hotkey="x" />
+                    <button string="Update Account" type="object" name="action_save" class="btn-primary" data-hotkey="q"/>
+                    <button string="Discard" class="btn-secondary" special="cancel" data-hotkey="x"/>
                 </footer>
             </form>
         </field>
