--- a/addons/l10n_ar_withholding/wizards/account_payment_register_views.xml
+++ b/addons/l10n_ar_withholding/wizards/account_payment_register_views.xml
@@ -5,6 +5,9 @@
         <field name="model">account.payment.register</field>
         <field name="inherit_id" ref="l10n_latam_check.view_account_payment_register_form"/>
         <field name="arch" type="xml">
+            <group name="group2">
+                <field name="l10n_ar_fiscal_position_id" options="{'no_create': True}" invisible="partner_type != 'supplier' or country_code != 'AR' or not can_edit_wizard or (can_group_payments and not group_payment)"/>
+            </group>
             <page name="latam_checks_page" position="after">
                 <page name="withholdings_page" string="Withholdings" invisible="country_code != 'AR'">
                     <field name="l10n_ar_withholding_ids" nolabel="1" colspan="2">
