[IMP] mail: improve `Message` component visual consistency and design
task-5042678

Part-of: odoo/odoo#224553
Signed-off-by: Alexandre Kühn (aku) <aku@odoo.com>

--- a/addons/mail/static/src/core/common/action_list.scss
+++ b/addons/mail/static/src/core/common/action_list.scss
@@ -18,11 +18,15 @@
         &.o-inline {
             &:where(:has(i:first-child:last-child)) {
                 height: ($btn-font-size * $btn-line-height) + $btn-padding-y * 2;
-                aspect-ratio: 1.1;
+                aspect-ratio: var(--o-mail-ActionList-Button-aspect-ratio, 1.1);
+                opacity: var(--o-mail-ActionList-Button-opacity);
                 line-height: 1;
 
                 &:where(.rounded-circle) {
                     aspect-ratio: 1;
+                }
+                &:hover, &:focus, &:active, &:focus-visible  {
+                    opacity: var(--o-mail-ActionList-Button-opacity--hover);
                 }
             }
 
