--- a/addons/mail/static/src/core/common/message.scss
+++ b/addons/mail/static/src/core/common/message.scss
@@ -65,29 +65,11 @@
 }
 
 .o-mail-Message-bubble {
-    &.o-blue {
-        background-color: mix($o-view-background-color, lighten($info, 5%), 85.5%) !important;
-        border-color: mix(darken(mix($o-view-background-color, lighten($info, 5%), 85.5%), 10%), white, 92.5%) !important;
+    background-color: var(--o-message-bubble-bg) !important;
+    border-color: var(--o-message-bubble-border-color) !important;
 
-        &.o-muted {
-            background-color: mix($white, mix($o-view-background-color, lighten($info, 5%), 90.5%)) !important;
-        }
-    }
-    &.o-green {
-        background-color: mix($o-view-background-color, lighten($success, 2.5%), 85.5%) !important;
-        border-color: mix(darken(mix($o-view-background-color, lighten($success, 2.5%), 85.5%), 10%), white, 92.5%) !important;
-
-        &.o-muted {
-            background-color: mix($white, mix($o-view-background-color, lighten($success, 5%), 90.5%)) !important;
-        }
-    }
-    &.o-orange {
-        background-color: mix($o-view-background-color, lighten($warning, 2.5%), 75%) !important;
-        border-color: mix(darken(mix($o-view-background-color, lighten($warning, 2.5%), 75%), 10%), white, 87.5%) !important;
-
-        &.o-muted {
-            background-color: mix($white, mix($o-view-background-color, $warning, 75%), 85%) !important;
-        }
+    &.o-muted {
+        background-color: $o-view-background-color !important;
     }
 }
 
@@ -97,28 +79,27 @@
     z-index: 1;
     top: 0;
 
-    &.o-blue {
-        .o-mail-Message-bubbleTailBg {
-            color: mix($o-view-background-color, lighten($info, 5%), 85.5%) !important;
-        }
-        .o-mail-Message-bubbleTailBorder {
-            color: mix(darken(mix($o-view-background-color, lighten($info, 5%), 85.5%), 10%), white, 92.5%) !important;
-        }
+    .o-mail-Message-bubbleTailBg {
+        color: var(--o-message-bubble-bg);
     }
-    &.o-green {
-        .o-mail-Message-bubbleTailBg {
-            color: mix($o-view-background-color, lighten($success, 2.5%), 85.5%) !important;
-        }
-        .o-mail-Message-bubbleTailBorder {
-            color: mix(darken(mix($o-view-background-color, lighten($success, 2.5%), 85.5%), 10%), white, 92.5%) !important;
-        }
+    .o-mail-Message-bubbleTailBorder {
+        color: var(--o-message-bubble-border-color);
     }
-    &.o-orange {
-        .o-mail-Message-bubbleTailBg {
-            color: mix($o-view-background-color, lighten($warning, 2.5%), 75%) !important;
-        }
-        .o-mail-Message-bubbleTailBorder {
-            color: mix(darken(mix($o-view-background-color, lighten($warning, 2.5%), 75%), 10%), white, 87.5%) !important;
+}
+
+.o-mail-Message-bubble, .o-mail-Message-bubbleTail {
+    $_bubble_colors_map: (
+        'o-blue': $info,
+        'o-green': $success,
+        'o-orange': $warning,
+    );
+
+    @each $_type, $_color in $_bubble_colors_map {
+        &.#{$_type} {
+            $_border-base: mix($_color, $body-color, 75%);
+            --o-message-bubble-bg: #{mix($o-view-background-color, $_color, 90%)};
+            --o-message-bubble-border-color: #{mix($o-view-background-color, $_border-base, 70%)};
+            --o-message-bubble-color-base: #{$_color};
         }
     }
 }
@@ -139,7 +120,7 @@
 
 .o-mail-Message-expandBtn {
     i {
-        opacity: 35%;
+        opacity: #{$o-opacity-muted};
     }
 
     &:hover, &.focus, &.show {
@@ -148,6 +129,12 @@
             color: var(--mail-Message-actionIconHoveredColor, black);
         }
     }
+}
+
+.o-mail-Message-actions {
+    --o-mail-ActionList-Button-aspect-ratio: 0.65;
+    --o-mail-ActionList-Button-opacity: #{$o-opacity-muted};
+    --o-mail-ActionList-Button-opacity--hover: 1;
 }
 
 .o-mail-Message-moreMenu {
