[FIX] account: improve pdf report layout with sections
Improve the pdf layout for sections & subsections.

1 - Add a horizontal padding like:
    - Section: padding = 0
    - Product into Section: padding = 2
    - Subsections: padding = 2
    - Product into subsection: padding = 4

2 - Sections & Subsections line are bold if there are not in Hide composition. Otherwise, the line will be displayed as a product line.

3 - Improve the Hide prices. Now, we do the same grouping as the Hide composition, meaning we group lines by group of taxes. We also hide the tax on product line, showing the tax only on the section line.

4 - Remove the "Subtotal: " lines. Now the subtotals will be displayed on section lines.

task-4966574

--- a/addons/l10n_hu_edi/views/report_invoice.xml
+++ b/addons/l10n_hu_edi/views/report_invoice.xml
@@ -81,7 +81,7 @@
             <attribute name="t-out">line.price_subtotal * sign</attribute>
             <attribute name="t-options">{"widget": "monetary", "display_currency": o.currency_id}</attribute>
         </xpath>
-        <xpath expr="//table[@name='invoice_line_table']//span[@t-out='current_subtotal']" position="attributes">
+        <xpath expr="//table[@name='invoice_line_table']//span[@t-out='section_subtotal']" position="attributes">
             <attribute name="t-out">current_subtotal * sign</attribute>
         </xpath>
         <xpath expr="//div[hasclass('clearfix')]//span[@t-field='o.amount_residual']" position="attributes">
