--- a/addons/l10n_ar/views/report_invoice.xml
+++ b/addons/l10n_ar/views/report_invoice.xml
@@ -127,7 +127,7 @@
         </td>
 
         <!-- use latam prices (to include/exclude VAT) -->
-        <xpath expr="//t[@t-foreach='lines']/t" position="before">
+        <xpath expr="//t[@t-foreach='lines_to_report']/t" position="before">
             <t t-set="l10n_ar_values" t-value="line._l10n_ar_prices_and_taxes()"/>
         </xpath>
         <xpath expr="//span[@t-field='line.price_unit']" position="attributes">
@@ -135,12 +135,9 @@
             <attribute name="t-out">l10n_ar_values['price_unit']</attribute>
             <attribute name="t-options">{"widget": "float", "display_currency": o.currency_id, "decimal_precision": "Product Price"}</attribute>
         </xpath>
-        <t t-set="current_subtotal" t-value="current_subtotal + line.price_subtotal" position="attributes">
-            <attribute name="t-value">current_subtotal + l10n_ar_values['price_subtotal']</attribute>
-        </t>
         <!-- if b2c we still wants the latam subtotal -->
-        <t t-set="current_total" t-value="current_total + line.price_total" position="attributes">
-            <attribute name="t-value">current_subtotal + l10n_ar_values['price_subtotal']</attribute>
+        <t t-set="section_subtotal" t-value="line.get_section_subtotal()" position="attributes">
+            <attribute name="t-value">line.get_section_subtotal() + l10n_ar_values['price_subtotal']</attribute>
         </t>
         <!-- label amount for subtotal column on b2b and b2c -->
         <xpath expr="//th[@name='th_subtotal']/span" position="replace">
@@ -167,6 +164,9 @@
         </xpath>
 
         <xpath expr="//span[@id='line_tax_ids']/.." position="attributes">
+            <attribute name="t-if">not o._l10n_ar_include_vat()</attribute>
+        </xpath>
+        <xpath expr="//span[@id='grouped_line_tax_ids']/.." position="attributes">
             <attribute name="t-if">not o._l10n_ar_include_vat()</attribute>
         </xpath>
         <span id="line_tax_ids" position="attributes">
