--- a/addons/l10n_cl/views/report_invoice.xml
+++ b/addons/l10n_cl/views/report_invoice.xml
@@ -148,7 +148,7 @@
 
         <xpath expr="//t[@t-set='layout_document_title']" position="replace"/>
 
-        <t t-set="current_subtotal" t-value="current_subtotal + line.price_subtotal" position="before">
+        <t t-set="section_subtotal" t-value="line.get_section_subtotal()" position="before">
             <t t-set="line_amounts" t-value="line._l10n_cl_get_line_amounts()"/>
         </t>
 
