--- a/addons/account/views/report_invoice.xml
+++ b/addons/account/views/report_invoice.xml
@@ -166,47 +166,91 @@
                                 </tr>
                             </thead>
                             <tbody class="invoice_tbody">
-                                <t t-set="current_subtotal" t-value="0"/>
-                                <t t-set="current_total" t-value="0"/>
                                 <t t-set="lines" t-value="o.invoice_line_ids.sorted(key=lambda l: (-l.sequence, l.date, l.move_name, -l.id), reverse=True)"/>
+                                <t t-set="current_section" t-value="0"/>
+                                <t t-set="current_subsection" t-value="0"/>
                                 <t t-set="treated_lines" t-value="[]"/>
 
                                 <t t-foreach="lines" t-as="line">
-                                    <t t-set="current_total" t-value="current_total + line.price_total"/>
                                     <t t-set="hide_details" t-value="line.collapse_composition"/>
+                                    <t t-set="hide_prices" t-value="line.collapse_prices"/>
 
-                                    <tr t-att-class="'fw-bolder o_line_section' if line.display_type == 'line_section' else 'fw-bold o_line_subsection' if line.display_type == 'line_subsection' else 'fst-italic o_line_note' if line.display_type == 'line_note' else ''">
-                                        <t t-if="line.id in treated_lines"/>
-                                        <t t-elif="hide_details">
-                                            <t t-set="grouped_lines" t-value="line.get_lines_grouped_by_section()"/>
-                                            <t t-set="current_subtotal" t-value="0"/>
-                                            <t t-foreach="grouped_lines" t-as="grouped_line">
-                                                <t t-set="current_subtotal" t-value="current_subtotal + grouped_line['price_subtotal']"/>
-                                                <tr>
-                                                    <t t-set="treated_lines" t-value="treated_lines + grouped_line['ids']"/>
-                                                    <td name="account_invoice_line_name_grouped">
-                                                        <span t-out="grouped_line['name']" t-options="{'widget': 'text'}">Group 1</span>
-                                                    </td>
-                                                    <td name="td_quantity_grouped" class="o_td_quantity text-end">
-                                                        <span>1.00</span>
-                                                    </td>
-                                                    <td name="td_price_unit_grouped" t-attf-class="text-end {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
-                                                        <span t-if="not line.collapse_prices" t-out="grouped_line['price_subtotal']" t-options="{'widget': 'float', 'decimal_precision': 'Product Price'}" class="text-nowrap">9.00</span>
-                                                    </td>
-                                                    <td name="td_discount_grouped" t-if="display_discount"/>
-                                                    <td name="td_taxes_grouped" t-if="display_taxes" class="text-end">
-                                                        <span t-out="','.join(grouped_line['taxes'])" id="line_tax_ids">Tax 15%</span>
-                                                    </td>
-                                                    <td name="td_subtotal_grouped" class="text-end o_price_total">
-                                                        <span t-if="not line.collapse_prices and o.company_price_include == 'tax_excluded'" class="text-nowrap" t-out="grouped_line['price_subtotal']" t-options='{"widget": "monetary", "display_currency": o.currency_id}'>27.00</span>
-                                                        <span t-if="not line.collapse_prices and o.company_price_include == 'tax_included'" class="text-nowrap" t-out="grouped_line['price_total']" t-options='{"widget": "monetary", "display_currency": o.currency_id}'>31.05</span>
-                                                    </td>
-                                                </tr>
-                                            </t>
+                                    <t t-if="line.id not in treated_lines and (hide_details or hide_prices)">
+                                        <t t-if="hide_details" t-set="grouped_lines" t-value="line.get_lines_grouped_by_section()"/>
+                                        <t t-if="hide_prices" t-set="grouped_lines" t-value="line.get_lines_grouped_by_section(False)"/>
+                                        <t t-set="current_subsection" t-value="0"/>
+                                        <t t-if="line.display_type == 'line_section'">
+                                            <t t-set="current_section" t-value="0"/>
                                         </t>
-                                        <t t-elif="line.display_type == 'product'" name="account_invoice_line_accountable">
-                                            <t t-set="current_subtotal" t-value="current_subtotal + line.price_subtotal"/>
-                                            <td name="account_invoice_line_name">
+                                        <t t-elif="line.display_type == 'line_subsection'">
+                                            <t t-set="current_section" t-value="line"/>
+                                        </t>
+                                        <t t-foreach="grouped_lines" t-as="grouped_line">
+                                            <t t-if="grouped_line['display_type'] == 'line_section'">
+                                                <t t-set="current_section" t-value="grouped_line"/>
+                                                <t t-set="current_subsection" t-value="0"/>
+                                            </t>
+                                            <t t-elif="grouped_line['display_type'] == 'line_subsection'">
+                                                <t t-set="current_subsection" t-value="grouped_line"/>
+                                            </t>
+                                            <tr t-att-class="'fw-bolder o_line_section' if grouped_line.get('display_type') == 'line_section' and not hide_details else 'fw-bold o_line_subsection' if grouped_line.get('display_type') == 'line_subsection' and not hide_details else ''">
+                                                <t t-set="treated_lines" t-value="treated_lines + grouped_line['ids']"/>
+                                                <!-- For desktop -->
+                                                <td name="account_invoice_line_name_grouped"
+                                                    t-att-colspan="1 if grouped_line['display_type'] not in ('line_section', 'line_subsection') else 4 if (grouped_line.get('taxes') and display_discount) or (not grouped_line.get('taxes') and not display_discount) else 3 if grouped_line.get('taxes') and not display_discount else 5"
+                                                    t-attf-class="d-none d-md-table-cell {{'px-4' if current_subsection and grouped_line['display_type'] != 'line_subsection' else 'px-3' if current_section and grouped_line['display_type'] != 'line_section' else 'px-1'}}">
+                                                    <span t-out="grouped_line['name']" t-options="{'widget': 'text'}">Group 1</span>
+                                                </td>
+                                                <!-- For mobile -->
+                                                <td name="account_invoice_line_name_grouped"
+                                                    t-att-colspan="1 if grouped_line['display_type'] not in ('line_section', 'line_subsection') else 2"
+                                                    t-attf-class="d-md-none d-table-cell {{'px-4' if current_subsection and grouped_line['display_type'] != 'line_subsection' else 'px-3' if current_section and grouped_line['display_type'] != 'line_section' else 'px-1'}}">
+                                                    <span t-out="grouped_line['name']" t-options="{'widget': 'text'}">Group 1</span>
+                                                </td>
+                                                <td name="td_quantity_grouped"
+                                                    colspan="1"
+                                                    t-if="hide_details or (hide_prices and grouped_line['display_type'] not in ('line_section', 'line_subsection'))"
+                                                    class="o_td_quantity text-end">
+                                                    <div t-if="hide_details">
+                                                        <span>1.00</span>
+                                                        <span groups="uom.group_uom">Units</span>
+                                                    </div>
+                                                    <div t-if="hide_prices and grouped_line['display_type'] not in ('line_section', 'line_subsection')">
+                                                        <span t-out="grouped_line['quantity']" t-options="{'widget': 'float', 'decimal_precision': 'Product Unit'}">1.00</span>
+                                                        <t t-if="grouped_line.get('line_uom')">
+                                                            <span t-out="grouped_line['line_uom'].display_name" groups="uom.group_uom">Unit</span>
+                                                            <span t-if="grouped_line.get('product_uom') != grouped_line['line_uom']" groups="uom.group_uom" class="text-muted small">
+                                                                <br/>
+                                                                <t t-set="product_uom_qty" t-value="grouped_line['line_uom']._compute_quantity(grouped_line['quantity'], grouped_line['product_uom'])"/>
+                                                                <span t-out="product_uom_qty" t-options="{'widget': 'float', 'decimal_precision': 'Product Unit'}" data-oe-demo="3.00"/> <span t-out="grouped_line['product_uom'].display_name" data-oe-demo="units"/>
+                                                            </span>
+                                                        </t>
+                                                    </div>
+                                                </td>
+                                                <td name="td_price_unit_grouped"
+                                                    t-if="grouped_line['display_type'] not in ('line_section', 'line_subsection')"
+                                                    colspan="1"
+                                                    t-attf-class="text-end {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
+                                                    <span t-if="not hide_prices" t-out="grouped_line['price_subtotal']" t-options="{'widget': 'float', 'decimal_precision': 'Product Price'}" class="text-nowrap">9.00</span>
+                                                </td>
+                                                <td name="td_discount_grouped" t-if="display_discount and grouped_line['display_type'] == 'product'" colspan="1" class="d-none d-md-table-cell"/>
+                                                <td name="td_taxes_grouped"
+                                                    colspan="1"
+                                                    t-if="(display_taxes and grouped_line['display_type'] in ('line_section', 'line_subsection') and grouped_line.get('taxes')) or grouped_line['display_type'] == 'product'"
+                                                    class="text-end d-none d-md-table-cell">
+                                                    <span t-if="grouped_line.get('taxes')" t-out="','.join(grouped_line['taxes'])" id="line_tax_ids">Tax 15%</span>
+                                                </td>
+                                                <td name="td_subtotal_grouped" colspan="1" class="text-end o_price_total">
+                                                    <span t-if="(grouped_line.get('display_type') in ('line_section', 'line_subsection') or hide_details) and o.company_price_include == 'tax_excluded'" class="text-nowrap" t-out="grouped_line['price_subtotal']" t-options='{"widget": "monetary", "display_currency": o.currency_id}'>27.00</span>
+                                                    <span t-if="(grouped_line.get('display_type') in ('line_section', 'line_subsection') or hide_details) and o.company_price_include == 'tax_included'" class="text-nowrap" t-out="grouped_line['price_total']" t-options='{"widget": "monetary", "display_currency": o.currency_id}'>31.05</span>
+                                                </td>
+                                            </tr>
+                                        </t>
+                                    </t>
+
+                                    <tr t-if="line.id not in treated_lines" t-att-class="'fw-bolder o_line_section' if line.display_type == 'line_section' else 'fw-bold o_line_subsection' if line.display_type == 'line_subsection' else 'fst-italic o_line_note' if line.display_type == 'line_note' else ''">
+                                        <t t-if="line.display_type == 'product'" name="account_invoice_line_accountable">
+                                            <td name="account_invoice_line_name" t-att-class="'px-4' if current_subsection else 'px-3' if current_section else 'px-1'">
                                                 <span t-if="line.name" t-field="line.name" t-options="{'widget': 'text'}">Bacon Burger</span>
                                             </td>
                                             <td name="td_quantity" class="o_td_quantity text-end">
@@ -226,7 +270,7 @@
                                             </td>
                                             <t t-set="taxes" t-value="', '.join(tax.tax_label for tax in line.tax_ids if tax.tax_label)"/>
                                             <td name="td_taxes" t-if="display_taxes" t-attf-class="text-end {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }} {{ 'text-nowrap' if len(taxes) &lt; 10 else '' }}">
-                                                <span t-out="taxes" id="line_tax_ids">Tax 15%</span>
+                                                <span t-if="not line.collapse_prices" t-out="taxes" id="line_tax_ids">Tax 15%</span>
                                             </td>
                                             <td name="td_subtotal" class="text-end o_price_total">
                                                 <span t-if="not line.collapse_prices and o.company_price_include == 'tax_excluded'" class="text-nowrap" t-field="line.price_subtotal">27.00</span>
@@ -234,15 +278,26 @@
                                             </td>
                                         </t>
                                         <t t-elif="line.display_type in ('line_section', 'line_subsection')">
+                                            <t t-if="line.display_type == 'line_section'">
+                                                <t t-set="current_section" t-value="line"/>
+                                                <t t-set="current_subsection" t-value="0"/>
+                                            </t>
+                                            <t t-else="">
+                                                <t t-set="current_subsection" t-value="line"/>
+                                            </t>
                                             <t t-set="section_subtotal" t-value="line.get_section_subtotal()"/>
-                                            <td colspan="4">
+                                            <!-- For desktop -->
+                                            <td t-att-colspan="4 if not display_discount else 5" t-attf-class="d-none d-md-table-cell {{'px-3' if current_subsection else 'px-1'}}">
+                                                <span t-if="line.name" t-field="line.name" t-options="{'widget': 'text'}">A section title</span>
+                                            </td>
+                                            <!-- For mobile -->
+                                            <td colspan="2" t-attf-class="d-md-none d-table-cell {{'px-3' if current_subsection else 'px-1'}}">
                                                 <span t-if="line.name" t-field="line.name" t-options="{'widget': 'text'}">A section title</span>
                                             </td>
                                             <td colspan="1" class="text-end o_price_total">
                                                 <span t-out="section_subtotal" class="text-nowrap" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                                             </td>
                                             <t t-set="current_section" t-value="line"/>
-                                            <t t-set="current_subtotal" t-value="0"/>
                                         </t>
                                         <t t-elif="line.display_type == 'line_note'">
                                             <td colspan="99">
@@ -250,17 +305,6 @@
                                             </td>
                                         </t>
                                     </tr>
-                                    <t t-if="not line.collapse_prices and current_section and (line_last or lines[line_index+1].display_type in ('line_section', 'line_subsection'))">
-                                        <tr class="is-subtotal text-end">
-                                            <td colspan="99">
-                                                <strong class="mr16">Subtotal</strong>
-                                                <span
-                                                    t-out="current_subtotal"
-                                                    t-options='{"widget": "monetary", "display_currency": o.currency_id}'
-                                                >31.05</span>
-                                            </td>
-                                        </tr>
-                                    </t>
                                 </t>
                             </tbody>
                         </table>
