--- a/addons/l10n_ar/views/report_invoice.xml
+++ b/addons/l10n_ar/views/report_invoice.xml
@@ -135,12 +135,9 @@
             <attribute name="t-out">l10n_ar_values['price_unit']</attribute>
             <attribute name="t-options">{"widget": "float", "display_currency": o.currency_id, "decimal_precision": "Product Price"}</attribute>
         </xpath>
-        <t t-set="current_subtotal" t-value="current_subtotal + line.price_subtotal" position="attributes">
-            <attribute name="t-value">current_subtotal + l10n_ar_values['price_subtotal']</attribute>
-        </t>
         <!-- if b2c we still wants the latam subtotal -->
-        <t t-set="current_total" t-value="current_total + line.price_total" position="attributes">
-            <attribute name="t-value">current_subtotal + l10n_ar_values['price_subtotal']</attribute>
+        <t t-set="section_subtotal" t-value="line.get_section_subtotal()" position="attributes">
+            <attribute name="t-value">line.get_section_subtotal() + l10n_ar_values['price_subtotal']</attribute>
         </t>
         <!-- label amount for subtotal column on b2b and b2c -->
         <xpath expr="//th[@name='th_subtotal']/span" position="replace">
