--- a/addons/mail/static/src/core/common/core.scss
+++ b/addons/mail/static/src/core/common/core.scss
@@ -76,6 +76,10 @@ $o-discuss-talkingColor: lighten($success, 10%);
         font-size: .78572 * $font-size-base !important; // roughly 11px, small but readable
         user-select: none;
     }
+    &.o-discuss-badge-circle {
+        aspect-ratio: 1;
+        line-height: 2;
+    }
 }
 
 .o-fw-600 {
