[FIX] l10n_it_stock_ddt,stock_delivery: kit component value
Steps to reproduce:
- Have an IT company setup
- Create a product with a Sales Price and define a kit BOM with 2
  components
- Create SO with product
- Confirm, go to delivery, validate
- Print

Issue:
In the delivery DDT, there is a summary of the delivery where each item
has its own entry (product, quantity, value).
However, in case of kit BOM, each component is reported with the full value
of the sale operation.

Analysis:
This occurs because in the report code we don't consider the possibility
of kit products, where multiple components are associated to the same
sale line.

opw-5013606

--- a/addons/l10n_it_stock_ddt/report/l10n_it_ddt_report.xml
+++ b/addons/l10n_it_stock_ddt/report/l10n_it_ddt_report.xml
@@ -127,12 +127,14 @@
                                         <span t-field="move.sale_line_id.discount"/>
                                     </td>
                                     <td>
+                                        <!-- t-if-else kept for stable policy, to be removed in master -->
                                         <t t-if="move.sale_line_id">
                                             <t t-set="lst_price" t-value="move.sale_line_id.price_reduce_taxexcl * move.quantity + move.sale_line_id.price_tax"/>
                                         </t>
                                         <t t-else="">
                                             <t t-set="lst_price" t-value="move.product_id.lst_price * move.product_uom._compute_quantity(move.quantity, move.product_id.uom_id)"/>
                                         </t>
+                                        <t t-set="lst_price" t-value="move.move_line_ids[0].sale_price"/>
                                         <span t-esc="lst_price"  t-options='{"widget": "monetary", "display_currency": o.company_id.currency_id}'/>
                                         <t t-set="total_value" t-value="total_value + lst_price"/>
                                     </td>
