--- a/addons/project/views/project_menus.xml
+++ b/addons/project/views/project_menus.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <menuitem
-        name="Project"
+        name="Project Testing"
         id="menu_main_pm"
         groups="group_project_manager,group_project_user"
         web_icon="project,static/description/icon.png"
