--- a/addons/stock/views/product_views.xml
+++ b/addons/stock/views/product_views.xml
@@ -572,9 +572,9 @@
                     <!-- <button name="%(action_view_inventory_tree)d" type="action" class="btn-link"
                             context="{'search_default_product_id': id, 'default_product_id': id}"> -->
                     <field name="qty_available" string="On Hand"
-                           sum="Total On Hand" widget="stock_float_action_field"
-                           options="{ 'actionName': 'stock.action_view_inventory_tree' }"
-                           context="{'search_default_product_id': id, 'default_product_id': id}"/>
+                           sum="Total On Hand" widget="stock_action_field"
+                           options="{ 'action_name': 'stock.action_view_inventory_tree' }"
+                           context="{ 'search_default_product_id': id, 'default_product_id': id }"/>
                     <field name="free_qty" string="Free to Use" sum="Total Free to Use"/>
                     <field name="incoming_qty" optional="show" sum="Total Incoming"/>
                     <field name="outgoing_qty" optional="show" sum="Total Outgoing"/>
