--- a/addons/stock_account/views/stock_move_views.xml
+++ b/addons/stock_account/views/stock_move_views.xml
@@ -6,11 +6,37 @@
         <field name="model">stock.move</field>
         <field name="arch" type="xml">
             <field name="state" position="after">
-                <field name="value" optional="show"/>
+                <field name="value" optional="hide"/>
                 <field name="remaining_qty" optional="hide"/>
                 <field name="remaining_value" optional="hide"/>
             </field>
         </field>
+    </record>
+
+    <record model="ir.ui.view" id="stock_move_view_list_valuation">
+        <field name="name">stock.move.view.list.valuation</field>
+        <field name="model">stock.move</field>
+        <field name="priority">1000</field>
+        <field name="arch" type="xml">
+            <list>
+                <field name="reference" width="15%;"/>
+                <field name="date"/>
+                <field name="quantity"/>
+                <field name="product_uom" groups="uom.group_uom"/>
+                <field name="lot_ids" widget="many2many_tags" column_invisible="context.get('tracking') == 'none'"/>
+                <field name="value" column_invisible="context.get('cost_method') != 'fifo'"/>
+                <field name="standard_price" column_invisible="context.get('cost_method') == 'fifo'"/>
+                <field name="remaining_qty" sum="Total Remaining Qty"/>
+                <field name="remaining_value" sum="Total Remaining Value"/>
+            </list>
+        </field>
+    </record>
+
+    <record model="ir.actions.act_window" id="stock_move_valuation_action">
+        <field name="name">Valuation</field>
+        <field name="res_model">stock.move</field>
+        <field name="view_mode">list</field>
+        <field name="view_id" ref="stock_move_view_list_valuation"/>
     </record>
 
     <record model="ir.actions.server" id="stock_move_action_adjust_valuation">
