[REF] mass_mailing: update snippets and themes for the html Builder
In order to use them in the html Builder, existing mass mailing snippets and
themes have to be updated.

Main changes, snippets:
- All snippets now use the `section` html tag to match Builder selectors for
  features like drag&drop, selection highlight, enabling associated Builder
  option, ...
- Snippets now follow website categorization. There are 2 types of snippets:
  - Inner Content: directly available from the Builder sidebar.
  - Categories: will open a dialog offering multiple snippets per category
  This will lighten the UX of the sidebar, and offer a better preview for more
  complex snippets in the dialog (as they are fully pre-rendered).

Main change, themes:
- The style element should use variables used by the Design tab (see
  `customize_mailing_variables.js`. If the desired style cannot be modified
  through these variables, caution is advised as the user won't be able to
  change it once set.

task-4247642

Co-authored-by: Damien Abeloos <abd@odoo.com>
Co-authored-by: Thomas Josse <thjo@odoo.com>

--- a/addons/mass_mailing/views/themes_templates.xml
+++ b/addons/mass_mailing/views/themes_templates.xml
@@ -18,20 +18,14 @@
     <!-- Default Theme -->
     <template id="theme_default_template">
         <style id="design-element">
-            h2 {
-                font-weight: bolder;
-            }
-            p, p > *, li, li > * {
-                color: #6c757d;
-            }
-            a:not(.btn), a.btn.btn-link {
-                font-weight: bolder;
-            }
-            hr {
-                border-top-color: #ced4da !important;
+            .o_layout .o_mail_wrapper .o_mail_wrapper_td {
+                --h2-font-weight: bolder;
+                --text-color: #6c757d;
+                --link-font-weight: bolder;
+                --separator-border-color: #ced4da !important;
             }
         </style>
-        <div class="s_header_logo o_mail_block_header_logo o_mail_snippet_general pt16 pb16">
+        <section class="s_header_logo o_mail_block_header_logo o_mail_snippet_general pt16 pb16" data-snippet="s_header_logo" data-name="Centered Logo">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4"/>
@@ -43,8 +37,8 @@
                     <div class="col-lg-4" style="text-align: right;"/>
                 </div>
             </div>
-        </div>
-        <div class="s_text_block o_mail_snippet_general pt40 pb16" style="padding-left: 15px; padding-right: 15px;">
+        </section>
+        <section class="s_text_block o_mail_snippet_general pt40 pb16" style="padding-left: 15px; padding-right: 15px;" data-snippet="s_text_block" data-name="Text">
             <div class="container s_allow_columns">
                 <h2>Thank you for joining us!</h2>
                 <p><br/>We want to take this opportunity to welcome you to our ever-growing community!
@@ -57,7 +51,7 @@
                     <a role="button" href="#" class="btn btn-primary">LOGIN</a>
                 </p>
             </div>
-        </div>
+        </section>
         <div class="s_hr pt16 pb16" data-snippet="s_hr" data-name="Separator">
             <hr class="s_hr_1px s_hr_solid"/>
         </div>
