--- a/addons/mass_mailing/views/snippets_themes.xml
+++ b/addons/mass_mailing/views/snippets_themes.xml
@@ -25,53 +25,68 @@
     </div>
 </template>
 
+<template id="mass_mailing.s_snippet_group" name="Snippet Group">
+    <section class="s_snippet_group"/>
+</template>
+
 <!-- Snippets & Themes Menu -->
 <template id="email_designer_snippets" inherit_id="web_editor.snippets" primary="True" groups="base.group_user">
     <xpath expr="//t[@id='default_snippets']" position="replace">
         <t id="default_snippets">
             <t t-set="company_id" t-value="res_company"/>
-            <snippets id="email_designer_header_elements" string="Headers">
-                <t t-snippet="mass_mailing.s_mail_block_header_social" string="Left Logo" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/block_header_social.png"/>
-                <t t-snippet="mass_mailing.s_mail_block_header_text_social" string="Left Text" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/block_header_text_social.png"/>
-                <t t-snippet="mass_mailing.s_mail_block_header_logo" string="Centered Logo" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/block_header_logo.png"/>
-                <t t-snippet="mass_mailing.s_cover" string="Cover" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_cover.svg"/>
-                <t t-snippet="mass_mailing.s_mail_block_header_view" string="View Online" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/block_header_browser.png"/>
+            <snippets id="snippet_groups" string="Categories">
+                <t snippet-group="headers" t-snippet="mass_mailing.s_snippet_group" string="Headers" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_alert.svg"/>
+                <t snippet-group="footers" t-snippet="mass_mailing.s_snippet_group" string="Footers" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/block_footer_social.png"/>
+                <t snippet-group="images" t-snippet="mass_mailing.s_snippet_group" string="Images" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_picture.svg"/>
+                <t snippet-group="headings" t-snippet="mass_mailing.s_snippet_group" string="Headings" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_title.svg"/>
+                <t snippet-group="people" t-snippet="mass_mailing.s_snippet_group" string="People" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_company_team.svg"/>
+                <t snippet-group="columns" t-snippet="mass_mailing.s_snippet_group" string="Columns" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_three_columns.svg"/>
+                <t snippet-group="marketing" t-snippet="mass_mailing.s_snippet_group" string="Marketing" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_comparisons.svg"/>
+                <t snippet-group="text" t-snippet="mass_mailing.s_snippet_group" string="Text" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_text_block.svg"/>
             </snippets>
-            <snippets id="email_designer_body_elements" string="Body">
-                <t t-snippet="mass_mailing.s_title" string="Title" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_title.svg"/>
-                <t t-snippet="mass_mailing.s_text_block" string="Text" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_text_block.svg"/>
-                <t t-snippet="mass_mailing.s_comparisons" string="Comparisons" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_comparisons.svg"/>
-                <t t-snippet="mass_mailing.s_color_blocks_2" string="Big Boxes" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_color_blocks_2.svg"/>
-                <t t-snippet="mass_mailing.s_three_columns" string="Columns" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_three_columns.svg"/>
-                <t t-snippet="mass_mailing.s_image_text" string="Image - Text" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_image_text.svg"/>
-                <t t-snippet="mass_mailing.s_text_image" string="Text - Image" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_text_image.svg"/>
-                <t t-snippet="mass_mailing.s_picture" string="Picture" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_picture.svg"/>
-                <t t-snippet="mass_mailing.s_features" string="Features" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_features.svg"/>
-                <t t-snippet="mass_mailing.s_numbers" string="Numbers" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_numbers.svg"/>
-                <t t-snippet="mass_mailing.s_masonry_block" string="Masonry" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_masonry_block.svg"/>
-                <t t-snippet="mass_mailing.s_media_list" string="Media List" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_media_list.svg"/>
-                <t t-snippet="mass_mailing.s_showcase" string="Showcase" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_showcase.svg"/>
+            <snippets id ="snippet_structure">
+                <t t-snippet="mass_mailing.s_mail_block_header_social" string="Left Logo" group="headers"/>
+                <t t-snippet="mass_mailing.s_mail_block_header_text_social" string="Left Text" group="headers"/>
+                <t t-snippet="mass_mailing.s_mail_block_header_logo" string="Centered Logo" group="headers"/>
+                <t t-snippet="mass_mailing.s_mail_block_header_view" group="headers" string="View Online"/>
+
+                <t t-snippet="mass_mailing.s_mail_block_footer_social" string="Footer Center" group="footers"/>
+                <t t-snippet="mass_mailing.s_mail_block_footer_social_left" string="Footer Left" group="footers"/>
+
+                <t t-snippet="mass_mailing.s_cover" string="Cover" group="images"/>
+                <t t-snippet="mass_mailing.s_image_text" group="images" string="Image - Text"/>
+                <t t-snippet="mass_mailing.s_text_image" group="images" string="Text - Image"/>
+                <t t-snippet="mass_mailing.s_picture" group="images" string="Picture"/>
+                <t t-snippet="mass_mailing.s_masonry_block" string="Masonry" group="images"/>
+
+                <t t-snippet="mass_mailing.s_title" string="Title" group="headings"/>
+
+                <t t-snippet="mass_mailing.s_company_team" string="Team" group="people"/>
+                <t t-snippet="mass_mailing.s_references" string="References" group="people"/>
+                <t t-snippet="mass_mailing.s_blockquote" string="Blockquote" group="people"/>
+
+                <t t-snippet="mass_mailing.s_three_columns" string="Columns" group="columns"/>
+                <t t-snippet="mass_mailing.s_color_blocks_2" string="Big Boxes" group="columns"/>
+                <t t-snippet="mass_mailing.s_media_list" string="Media List" group="columns"/>
+                <t t-snippet="mass_mailing.s_features" string="Features" group="columns"/>
+                <t t-snippet="mass_mailing.s_numbers" string="Numbers" group="columns"/>
+                <t t-snippet="mass_mailing.s_event" string="Event" group="columns"/>
+                <t t-snippet="mass_mailing.s_product_list" string="Items" group="columns"/>
+                    <t t-snippet="mass_mailing.s_features_grid" string="Features Grid" group="columns"/>
+
+                <t t-snippet="mass_mailing.s_comparisons" string="Comparisons" group="marketing"/>
+                <t t-snippet="mass_mailing.s_showcase" string="Showcase" group="marketing"/>
+                <t t-snippet="mass_mailing.s_call_to_action" string="Call to Action" group="marketing"/>
+                <t t-snippet="mass_mailing.s_coupon_code" string="Promo Code" group="marketing"/>
+                <t t-snippet="mass_mailing.s_mail_block_discount1" string="Discount Offer" group="marketing"/>
+
+                <t t-snippet="mass_mailing.s_text_block" string="Paragraph" group="text"/>
             </snippets>
-            <snippets id="email_designer_marketing_elements" string="Marketing Content">
-                <t t-snippet="mass_mailing.s_company_team" string="Team" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_company_team.svg"/>
-                <t t-snippet="mass_mailing.s_call_to_action" string="Call to Action" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_call_to_action.svg"/>
-                <t t-snippet="mass_mailing.s_references" string="References" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_references.svg"/>
-                <t t-snippet="mass_mailing.s_coupon_code" string="Promo Code" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/block_discount2.png"/>
-                <t t-snippet="mass_mailing.s_mail_block_discount1" string="Discount Offer" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/block_discount1.png"/>
-                <t t-snippet="mass_mailing.s_event" string="Event" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_event.svg"/>
-                <t t-snippet="mass_mailing.s_product_list" string="Items" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_product_list.svg"/>
-                <t t-snippet="mass_mailing.s_features_grid" string="Features Grid" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_features_grid.svg"/>
-            </snippets>
-            <snippets id="email_designer_inner_elements" string="Inner Content">
+            <snippets id="snippet_content" string="Inner Content">
                 <t t-snippet="mass_mailing.s_alert" string="Alert" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_alert.svg"/>
                 <t t-snippet="mass_mailing.s_rating" string="Rating" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_rating.svg"/>
-                <t t-snippet="mass_mailing.s_blockquote" string="Blockquote" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_blockquote.svg"/>
                 <t t-snippet="mass_mailing.s_hr" string="Separator" t-thumbnail="/web_editor/static/src/img/snippets_thumbs/s_hr.svg"/>
                 <t t-snippet="mass_mailing.s_text_highlight" string="Text Highlight" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/s_text_highlight.svg"/>
-            </snippets>
-            <snippets id="email_designer_footer_elements" string="Footers">
-                <t t-snippet="mass_mailing.s_mail_block_footer_social" string="Footer Center" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/block_footer_social.png"/>
-                <t t-snippet="mass_mailing.s_mail_block_footer_social_left" string="Footer Left" t-thumbnail="/mass_mailing/static/src/img/snippets_thumbs/block_footer_social_left.png"/>
             </snippets>
         </t>
     </xpath>
@@ -79,7 +94,7 @@
 
 <!-- Snippet Templates -->
 <template id="s_mail_block_header_social" name="Left Logo">
-    <div class="s_header_social o_mail_block_header_social o_mail_snippet_general pt16 pb16">
+    <section class="s_header_social o_mail_block_header_social o_mail_snippet_general pt16 pb16" data-name="Left Logo">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 pt16 pb16">
@@ -92,11 +107,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 </template>
 
 <template id="s_mail_block_header_text_social" name="Left Text">
-    <div class="s_header_text_social o_mail_block_header_text_social o_mail_snippet_general">
+    <section class="s_header_text_social o_mail_block_header_text_social o_mail_snippet_general" data-name="Left Text">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 pt16 pb16">
@@ -111,11 +126,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 </template>
 
 <template id="s_mail_block_header_logo" name="Centered Logo">
-    <div class="s_header_logo o_mail_block_header_logo o_mail_snippet_general">
+    <section class="s_header_logo o_mail_block_header_logo o_mail_snippet_general" data-name="Centered Logo">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3"/>
@@ -127,19 +142,19 @@
                 <div class="col-lg-3" style="text-align: right;"/>
             </div>
         </div>
-    </div>
+    </section>
 </template>
 
 <template id="s_mail_block_header_view" name="View Online">
-    <div class="o_snippet_view_in_browser o_mail_snippet_general pt16 pb16" style="text-align: center; padding-left: 15px; padding-right: 15px;">
+    <section class="o_snippet_view_in_browser o_mail_snippet_general pt16 pb16" style="text-align: center; padding-left: 15px; padding-right: 15px;" data-name="View Online">
         <a href="/view">
             View Online
         </a>
-    </div>
+    </section>
 </template>
 
 <template id="s_mail_block_discount1" name="Discount Offer">
-    <div class="s_discount1 o_mail_block_discount1 o_mail_snippet_general pt0 pb16">
+    <section class="s_discount1 o_mail_block_discount1 o_mail_snippet_general pt0 pb16" data-name="Discount Offer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 pt16">
@@ -154,11 +169,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 </template>
 
-<template id="s_mail_block_footer_social" name="Footer Center">
-    <div class="s_footer_social o_mail_block_footer_social o_mail_footer_social_center o_mail_snippet_general bg-200 pt16">
+<template id="s_mail_block_footer_social">
+    <section class="s_footer_social o_mail_block_footer_social o_mail_footer_social_center o_mail_snippet_general bg-200 pt16" data-name="Footer Center">
         <div class="container">
             <div class="row">
                 <div class="col-lg o_mail_footer_social" style="text-align: center;">
@@ -178,11 +193,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 </template>
 
 <template id="s_mail_block_footer_social_left" name="Footer Left">
-    <div class="s_footer_social o_mail_block_footer_social o_mail_footer_social_left o_mail_snippet_general pt16">
+    <section class="s_footer_social o_mail_block_footer_social o_mail_footer_social_left o_mail_snippet_general pt16" data-name="Footer Left">
         <div class="container">
             <div class="row">
                 <div class="col-lg o_mail_footer_description">
@@ -199,7 +214,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 </template>
 
 <template id="social_links">
