[REF] mass_mailing: use html Builder instead of OdooEditor
This commit refactors the mass mailing HtmlField in order to make use of the
html Builder that is already used in website.

Notable information:
- The new Builder does not support being opened in a Dialog. Dialogs are opened
  through the `overlay_container`, which can handle multiple
  components that are sorted in the DOM. The html Builder also uses the
  `overlay_container` to display editor toolbars and handles. When a DOM sorting
  happens, the editor iframe is removed temporarily from the DOM, which is
  enough to empty its content completely, and the editor is not able to recover
  from that.
- Most snippets now use the html tag `section`
- The Design Tab uses an "adopted stylesheet" with variables. Custom templates
  only have to set the value for each variable (which is associated with an
  option in the Tab), no need to specify selectors (they are computed
  automatically for convenience).
- Snippets and templates will be revamped soon, this commit only adjusts legacy
  ones for consistency.
- Existing user mail templates are not upgraded. They can still be viewed, but
  it is recommended to rewrite them. An upgrade script may be added if it's
  concluded that it is necessary at a later date.
- mass_mailing is still dependent on style sheets (.scss) from `web_editor`.
  Usage of these sheets will be refined in the future. There is no reliance on
  JS code from `web_editor` anymore.

task-4247642

Co-authored-by: Damien Abeloos <abd@odoo.com>
Co-authored-by: Thomas Josse <thjo@odoo.com>

--- a/addons/mass_mailing/views/mailing_mailing_views.xml
+++ b/addons/mass_mailing/views/mailing_mailing_views.xml
@@ -260,23 +260,13 @@
                         <notebook>
                             <page string="Mail Body" name="mail_body">
                                 <div class="position-relative">
-                                    <field name="body_arch" class="o_mail_body" widget="mass_mailing_html"
+                                    <field name="body_arch" class="o_mail_body_mailing" widget="mass_mailing_html"
                                         options="{
-                                            'snippets': 'mass_mailing.email_designer_snippets',
-                                            'cssEdit': 'mass_mailing.iframe_css_assets_edit',
-                                            'inline-field': 'body_html',
+                                            'inline_field': 'body_html',
                                             'dynamic_placeholder': true,
                                             'dynamic_placeholder_model_reference_field': 'mailing_model_real',
-                                            'cssReadonly': 'mass_mailing.iframe_css_assets_edit'
-                                    }" readonly="state in ('sending', 'done')"/>
+                                        }" readonly="state in ('sending', 'done')"/>
                                     <field name="is_body_empty" invisible="1"/>
-                                    <div class="o_view_nocontent oe_read_only" invisible="not is_body_empty or state in ('sending', 'done')">
-                                        <div class="o_nocontent_help">
-                                            <p class="o_view_nocontent_smiling_face">
-                                                This mailing has no selected design (yet!).
-                                            </p>
-                                        </div>
-                                    </div>
                                 </div>
                             </page>
                             <page string="A/B Tests" name="ab_testing">
