--- a/addons/mass_mailing/views/mailing_mobile_preview_content.xml
+++ b/addons/mass_mailing/views/mailing_mobile_preview_content.xml
@@ -3,7 +3,7 @@
     <template id="mass_mailing.preview_content_mobile">
         <html>
             <head>
-                <t t-call-assets="mass_mailing.iframe_css_assets_edit" t-js="False"></t>
+                <t t-call-assets="mass_mailing.assets_iframe_style" t-js="False"></t>
             </head>
             <body></body>
         </html>
