--- a/addons/mass_mailing/static/src/scss/themes/theme_default.scss
+++ b/addons/mass_mailing/static/src/scss/themes/theme_default.scss
@@ -63,6 +63,7 @@ div.col:not([align]) {
     > .o_mail_wrapper {
         width: 100%;
         margin: 0 auto;
+        max-width: 1320px; // container max-width for xxl dimensions
 
         &.o_mail_small {
             max-width: 600px;
@@ -188,30 +189,16 @@ div.col[class*="mb"], div.col[class*="mt"] {
 // DEFAULT_CSS styles
 
 .o_mail_wrapper {
-    h1 {
-        font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
-    }
-    h2 {
-        font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
-    }
-    h3 {
-        font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
-    }
-    p, p > *, li, li > * {
-        font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
-    }
-    a.btn-primary, a.btn-outline-primary, a.btn-fill-primary {
-        color: #FFFFFF;
-        background-color: #35979c;
-        border-color: #35979c;
-    }
-    a.btn-secondary, a.btn-outline-secondary, a.btn-fill-secondary {
-        color: #FFFFFF;
-        background-color: #685563;
-        border-color: #685563;
-    }
-    hr {
-        border-top-color: #212529;
-        width: 100%;
-    }
+    --h1-font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
+    --h2-font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
+    --h3-font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
+    --text-font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
+    --btn-primary-color: #FFFFFF;
+    --btn-primary-background-color: #35979c;
+    --btn-primary-border-color: #35979c;
+    --btn-secondary-color: #FFFFFF;
+    --btn-secondary-background-color: #685563;
+    --btn-secondary-border-color: #685563;
+    --separator-border-color: #212529;
+    --separator-width: 100%;
 }
