[IMP] html_editor: improve revision history dialog
Exclude external view from history dialog content and unified comparison Views.
External view are dynamic content loaded via "data-embeded" properties present in the raw html data.
It's mainly used in the Knowledge module.

task-3560677

closes odoo/odoo#220591

Related: odoo/enterprise#91031
Signed-off-by: David Monjoie (dmo) <dmo@odoo.com>

--- a/addons/html_editor/static/src/components/history_dialog/history_dialog.scss
+++ b/addons/html_editor/static/src/components/history_dialog/history_dialog.scss
@@ -31,6 +31,26 @@
         padding: 8px 12px;
         border: 1px solid #ddd;
         border-top: 0;
+        .embedded-history-dialog-placeholder {
+            color: #444;
+            padding: 32px;
+            text-align: center;
+            font-size: 20px;
+            border : 1px solid #999;
+            border-radius: 4px;
+            margin: 8px 0;
+            background-image: linear-gradient(45deg, #d1d1d1 25%, #999 25%, #999 50%, #d1d1d1 50%, #d1d1d1 75%, #999 75%, #999);
+            background-size: 50px 50px;
+            text-shadow:
+                    -2px -2px 0 #d1d1d1,
+                    2px -2px 0 #d1d1d1,
+                    -2px 2px 0 #d1d1d1,
+                    2px 2px 0 #d1d1d1,
+                    -3px 0px 0 #d1d1d1,
+                    3px 0px 0 #d1d1d1,
+                    0px -3px 0 #d1d1d1,
+                    0px 3px 0 #d1d1d1,
+        }
     }
     .history-container {
         --border-color: #ddd;
