[IMP] point_of_sale: Epson Server Direct Print integration
This PR adds the support of Epson Server Direct Print in the POS.

Documentation: https://files.support.epson.com/pdf/pos/bulk/tm-int_sdp_um_e_reve.pdf
xml reference: https://files.support.epson.com/pdf/pos/bulk/epos-print_xml_um_en_revk.pdf

Functionning:
1) In supported printers settings the user must set up a url to poll every x seconds.

2) In the point of sale frontend we call a backend controller to add a receipt to a print queue.
The frontend then subscribed to a websocket channel and waits for a notification.

3) Once the polling printer finds a receipt in a queue
it will pop it from the queue and attempt to print it.

4) After the printing succeeds/fails the printer will call the same controller to notify
it of the printing result

5) Based on the print_job_id the backend notifies the corresponding frontend PoS of the result

Important notes:
a) Printer firmware might need to be updated to support job_id retrieval from the receipt sent
b) The print jobs queue is limited in size and once full will be reset to avoid being stuck
c) The printer polling interval should be set to a value higher than the PoS notification timeout

task-4860236

--- a/addons/point_of_sale/views/pos_config_view.xml
+++ b/addons/point_of_sale/views/pos_config_view.xml
@@ -77,6 +77,12 @@
                                 <div class="col-lg-7">
                                     <field name="epson_server_direct_print_url" widget="CopyClipboardChar"/>
                                 </div>
+                                <div class="col-lg-5 o_light_label">
+                                        <label string="Cashdrawer" for="iface_cashdrawer"/>
+                                    </div>
+                                <div class="col-lg-7">
+                                    <field name="iface_cashdrawer"/>
+                                </div>
                             </div>
                         </setting>
                         <setting string="IoT Box" help="Connect devices using an IoT Box">
