[IMP] base_geolocalize: add request signature field

--- a/addons/base_geolocalize/views/res_config_settings_views.xml
+++ b/addons/base_geolocalize/views/res_config_settings_views.xml
@@ -13,6 +13,7 @@
                     <field name="geoloc_provider_techname" invisible="1"/>
                     <div invisible="geoloc_provider_techname != 'googlemap'">
                         Key: <field name='geoloc_provider_googlemap_key'/>
+                        Signing Secret: <field name='geoloc_provider_googlemap_signing_secret'/>
                     </div>
                 </div>
             </xpath>
